# Hermes

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  routes.yaml  run.py
hermes/: __init__.py  __main__.py  cli.py  main.py
hermes/core/: config.py  exceptions.py  logging.py
hermes/gateway/: __init__.py  balancer.py  matcher.py  proxy.py  router.py
hermes/middleware/: request_id.py  web_auth.py
hermes/observability/: __init__.py  health.py  metrics.py
hermes/plugins/: authentication.py  base.py  circuit_breaker.py  headers.py  rate_limit.py  registry.py
hermes/registry/: __init__.py  client.py  route_cache.py
hermes/schemas/: route.py
hermes/web/: __init__.py  routes.py
static/css/: style.css
static/js/: main.js
templates/: base.html  dashboard.html  metrics.html  routes.html  routes_edit.html  services.html
